--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.0",
+    "babel-polyfill": "^6.26.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "iview": "^3.4.2",
